[package]
name = "rustvpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
aes-gcm = "0.10.3"
tokio = { version = "1", features = ["full", "signal"] }
tun = "0.6.1"
serde = "1.0"
serde_derive = "1.0.190"
bincode = "1.3"
rand = "0.8"
anyhow = "1.0"
ctrlc = "3.1"
